# whisperX-custom

./: CLAUDE.md  pyproject.toml
whisperx/: asr.py  diarize.py  transcribe.py
whisperx/vads/: pyannote.py
